--- a/obcan/obcan_submenu.html
+++ b/obcan/obcan_submenu.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <link href="fontawesome/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="C:\Users\matus.gore\VS Code\Michalany web\mich_web\CSS\style.css">
 
-    <title>Úradna tabuľa: Michaľany</title>
+    <title>Občan: Michaľany</title>
   </head>
   <nav class="navbar navbar-light bg-white border-bottom border-success navbar-expand-lg" id="myNavbar">
     <div class="container collapsed">
@@ -28,7 +28,7 @@
               
             </li>
             <li class="nav-item px-4">
-              <h4><a class="nav-link" href="#">Samospráva</a></h4>
+              <h4><a class="nav-link" href="../samosprava/samosprava_submenu.html">Samospráva</a></h4>
               
             </li>
             <li class="nav-item px-4 active">
@@ -41,73 +41,57 @@
    </nav>
 
 <div class="container-fluid bg-light py-5">
-<div class="container pt-5 bg-white">
-    <div class="row">
-    <!-- menu -->
-    <div class="col-3">
-        <div class="bg-green">
-            <h4 class="lfmenu pt-auto">Samospráva</h4>
+<div class="container pt-1">
+    <h2 class="text-center mb-5 display-3" style="font-weight: 700; color: green;">Občan</h2>
+    <div class="row mx-auto">
+        <div class="col-sm">
+          <a href="#" class="amenu">
+          <div class="card text-center submenu">
+            <div class="card-body">
+               <h5 class="card-title mt-3 up">KULTÚRA</h5> 
+            </div>
+          </div>
+          </a>
         </div>
-        <div class="bg-light">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Starosta obce</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Obecné zastupiteľstvo</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Obécne komisie</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Zoznám došlých faktúr</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Zmluvy</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Všeobecné záväzné nariadenia</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Rozpočet obce</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Záverečný účet obce</a>
-                  </li> 
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Úradna tabuľa</a>
-                  </li> 
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Verejné obstaravanie</a>
-                  </li>  
-
-              </ul>
+        <div class="col-sm">
+          <a href="#" class="amenu">
+          <div class="card text-center submenu">
+            <div class="card-body">
+                <h5 class="card-title mt-3 up">ŠPORT</h5> 
+            </div>
+          </div>
+          </a>  
+        </div>
+        <div class="col-sm">
+          <a href="#" class="amenu">
+          <div class="card text-center submenu">
+            <div class="card-body">
+                <h5 class="card-title mt-3 up">triedenie komunálneho odpadu</h5> 
+            </div>
+          </div>
+          </a>  
         </div>
     </div>
 
-    <!-- uradna tabula -->
-    <div class="col-sm verticalLine">
-        <h2 class="mb-5 display-4" style="font-weight: 500; color: green;">Úradna tabuľa</h2>
-        <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">Dátum zverejnenia</th>
-                <th scope="col">Názov</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-              </tr>
-              <tr>
-                <td>Jacob hlsôjfl kljsdf </td>
-                <td>Thornton afajs§f kja§sf</td>
-              </tr>
-            </tbody>
-          </table>
-    </div>
-
+    <div class="row mx-auto mt-3 pb-5">
+      <div class="col-lg-4">
+        <a href="#" class="amenu">
+        <div class="card text-center submenu">
+          <div class="card-body">
+              <h5 class="card-title mt-3 up">Registrácia ošípanych</h5>
+          </div>
+        </div>
+          </a>
+      </div> 
+        <div class="col-sm">
+          <a href="#" class="amenu">
+          <div class="card text-center submenu">
+            <div class="card-body">
+                <h5 class="card-title mt-3 up">ako vybaviť</h5> 
+            </div>
+          </div>
+          </a>  
+        </div>
     </div>
 
   </div>
