--- a/samosprava/uradna_tabula.html
+++ b/samosprava/uradna_tabula.html
@@ -40,14 +40,14 @@
     </div>  
    </nav>
 
-<div class="container-fluid bg-light py-5">
+<div class="container-fluid bg-light py-4">
 
-<div class="container pt-5">
+<div class="container">
   <div><p>cesta</p></div>
     <div class="row">
     <!-- menu -->
     <div class="col-3">
-      <h4 class=" pt-auto">Samospráva</h4>
+      <h2 class="mt-3 pb-3">Samospráva</h2>
         <div id="myNavbar">
           <ul class="nav flex-column">
             <li class="nav-item">
@@ -86,7 +86,7 @@
     </div>
 
     <!-- uradna tabula -->
-    <div class="col-sm verticalLine">
+    <div class="col-sm mx-5">
         <h2 class="mb-5 display-4" style="font-weight: 500; color: green;">Úradna tabuľa</h2>
         <table class="table table-hover">
             <thead>
