uradna tabula riadok 49 <div class="col-3 d-none d-lg-block">

--- a/samosprava/uradna_tabula.html
+++ b/samosprava/uradna_tabula.html
@@ -46,7 +46,7 @@
   <div><p>cesta</p></div>
     <div class="row">
     <!-- menu -->
-    <div class="col-3">
+    <div class="col-3 d-none d-lg-block">
       <h2 class="mt-3 pb-3">Samospráva</h2>
         <div id="myNavbar">
           <ul class="nav flex-column">
