pridany kod riadok 46 - 54

--- a/samosprava/uradna_tabula.html
+++ b/samosprava/uradna_tabula.html
@@ -43,7 +43,15 @@
 <div class="container-fluid bg-light py-4">
 
 <div class="container">
-  <div><p>cesta</p></div>
+ <div class="d-block d-sm-none d-none d-sm-block d-lg-none">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb bg-light justify-content-end">
+      <li class="breadcrumb-item"><a href="../index.html">Titulna stránka</a></li>
+      <li class="breadcrumb-item"><a href="samosprava_submenu.html">Samospráva</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Úradna tabuľa</li>
+    </ol>
+  </nav>
+ </div>
     <div class="row">
     <!-- menu -->
     <div class="col-3 d-none d-lg-block">
